--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
   font-family: system-ui, sans-serif;
   background: #f5f5f5;
